8320761: [Lilliput] Implement compact identity hashcode